fix regwall-grid pushing page out to the right on mobile

--- a/static/css/decks/dsp.css
+++ b/static/css/decks/dsp.css
@@ -264,7 +264,8 @@ section.dsp {
  */
 
 .regwall-grid {
-  --columns: 1fr 400px 1fr;
+  --columns: 1fr minmax(auto, 400px) 1fr;
+  grid-column-gap: 0px;
   padding: 15px;
 }
 
